added CRUD for sets and all needed comp./services

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input {
+  outline: none;
+}
+
+@layer components {
+  .set-input {
+    @apply p-2 rounded-xl bg-lime-100 w-full
+  }
+}
