--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,8 @@ input {
   .input {
     @apply w-full py-2 px-3 border-2 rounded-md
   }
+
+  .link {
+    @apply text-amber-600 border-b-2 border-amber-700 cursor-pointer
+  }
 }
