--- a/src/app/(app)/globals.css
+++ b/src/app/(app)/globals.css
@@ -26,7 +26,11 @@ input {
 
 /* tabs */
 .rc-tabs-nav {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+}
+
+.rc-tabs-nav-operations {
+  display: none;
 }
 
 .rc-tabs-nav-list {
